# sgx-netting

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker_build_sgx.sh  docker_entry.sh
app/: App.java  CMakeLists.txt  app.cpp  app.h  app_jni.cpp  app_jni.h  crypto.cpp  crypto.h  main.cpp  ocall.cpp  rest_main.cpp  test_main.cpp  test_rest.cpp  trades.txt
app/data/: StandardId.java  Trade.java
cmake/: FindSGXSDK.cmake
common/: NotionalMatrix.h  SemiLocalAlgorithm.h  buffer.h  crypto.h  jni_util.h  serial_trades.cpp  serial_trades.h  shared_ptr.h  trade.h  util.h
doc/: CompressionMatrix.java  SemiLocalCompressionAlgorithm.java
enclave/: CMakeLists.txt  crypto.cpp  crypto.h  enclave.config.xml  enclave.edl  enclave_state.cpp  enclave_state.h  enclave_t.c  enclave_t.h  enclave_u.c  enclave_u.h  outside.cpp  outside.h  semi_local_compress.cpp
include/: base64.h
lib/: CMakeLists.txt  build_pistache.sh
